--- a/style.css
+++ b/style.css
@@ -7,3 +7,20 @@
 body {
     background-color: black;
 }
+
+section {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    padding: 5px 5px;
+}
+
+.lamp {
+   display: flex;
+   align-items: center;
+}
+
