--- a/style.css
+++ b/style.css
@@ -5,7 +5,15 @@
 }
 
 body {
-    background-color: black;
+    background-color: #000000;
+    width: 100vw;
+    height: 100vh;
+}
+
+button {
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 20px;
 }
 
 section {
@@ -13,14 +21,5 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-button {
-    padding: 5px 5px;
-}
-
-.lamp {
-   display: flex;
-   align-items: center;
 }
 
